[project]
name = "quantpulse"
version = "0.1.0"
description = "Self-hosted, zero-cost stock research & portfolio-management engine"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "yfinance>=1.5.1",
    "requests>=2.34.2",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pandas-market-calendars>=5.4.0",
    "lxml>=6.1.1",
    "pandas-ta-classic>=0.6.52",
    "scipy>=1.18.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14",
    "numpy>=2.5.1",
    "feedparser>=6.0.12",
    "praw>=8.0.2",
    "spacy>=3.8.14",
    "en-core-web-sm",
    "click>=8.4.2",
    "transformers>=5.14.1",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantpulse"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "scripts", "app"]
# Alembic-generated revision boilerplate isn't hand-written; don't lint it.
extend-exclude = ["src/quantpulse/storage/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
